# aql-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
scripts/: install.sh  update.sh
src/: agent.ts  config.ts  health.ts  index.ts  mcp.ts  models.ts  system-prompt.txt
src/aql_agent/: __init__.py  __main__.py  agent.py  config.py  health.py  main.py  models.py
src/aql_agent/channels/: base.py  cli.py  slack.py
src/aql_agent/tools/: custom.py
src/channels/: base.ts  cli.ts  slack.ts
src/tools/: anthropic.ts  custom.ts  get-time.ts  index.ts  system-info.ts
systemd/: aql-agent-update.service  aql-agent-update.timer  aql-agent.service
